# garch_project

./: .gitignore  .pre-commit-config.yaml  README.md  garch.html  garch.qmd  pyproject.toml  requirements.txt
data/: DGS10.csv
garch_files/libs/bootstrap/: bootstrap-859fdc8a5e322124a7e81024587906da.min.css
notebooks/: garch.html  garch.md  garch.qmd  garch_presentation.html  garch_presentation.qmd  garch_quarto.py  garch_quarto.qmd
papers/: README.md
presentation/: custom.css  garch_presentation.html
report/: garch.html  garch.qmd
report/garch_files/libs/bootstrap/: bootstrap-e52c317b831d71bd0833fd401c29266f.min.css
scripts/: garch_quarto.qmd
src/: __init__.py  garch.py  garch_implementation.py  garch_presentation.py  garch_quarto.py  prices.pkl  utils.py
