[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
per-file-ignores = "__init__.py:F401"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.jupytext]
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"

[tool.jupytext.formats]
"notebooks/" = "qmd" # it's an interesting bug btw
"./notebooks/" = "ipynb"
"src/" = "py:percent"

[tool.poetry]
name = "garch-project"
version = "0.1.0"
description = "GARCH Model Implementation based on Robert F. Engle's paper"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.0"
pandas = "^1.3.0"
scipy = "^1.7.0"
statsmodels = "^0.14.3"
matplotlib = "^3.4.0"
scikit-learn = "^1.6.1"
yfinance = "^0.2.55"
arch = "^5.0.0"
jupytext = "^1.14.5"
ipykernel = "^6.29.5"
nbclient = "^0.10.2"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
easy-commit = "^0.1.0"
invoke = "^2.0.0"
black = "^23.3.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
mypy = "^1.1.1"
bandit = "^1.7.4"
